--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Hello DEar</title>
     </head>
     <body>
-        <h1>Hello Project</h1>
+        <h1>Hello Deepali ! You are so beautiful</h1>
+        <img src="C:\Users\khalnayank\Downloads\pp-removebg-preview.png">
     </body>
 </html>
