--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Hello Deepali ! You are so beautiful</h1>
-        <img src="C:\Users\khalnayank\Downloads\pp-removebg-preview.png">
+        <img src="pp-removebg-preview.png">
     </body>
 </html>
