--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Hello DEar</title>
     </head>
     <body>
-        <h1>Hello Deepali ! You are so beautiful</h1>
+        <h1>Hello Deepali !</h1>
         <img src="pp-removebg-preview.png">
     </body>
 </html>
